# example_project

./: README.md  pyproject.toml
.github/workflows/: pre-release.yml  pylint.yml  release.yml  tagged-release.yml
src/example_package_4ndrs/: example.py
