[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_4ndrs"
version = "0.0.3"
authors = [
    { name="4ndrs", email="andres.degozaru@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/4ndrs/example_project"
"Bug Tracker" = "https://github.com/4ndrs/example_project/issues"

